RESOLVED FIXED161502
Web Inspector: If inspector process crashes, re-inspecting the page does not work
https://bugs.webkit.org/show_bug.cgi?id=161502
Summary Web Inspector: If inspector process crashes, re-inspecting the page does not ...
Joseph Pecoraro
Reported 2016-09-01 12:19:45 PDT
Summary: If inspector process crashes, re-inspecting the page does not work immediately. Steps to Reproduce: 1. Inspect this page 2. shell> kill -9 <pid-of-InspectorProcess> 3. Inspect this page => Nothing 4. Inspect this page again => Inspector shows but is broken Notes: - WebInspectorProxy has code to handle webProcessDidCrash. It must not be cleaning up everything.
Attachments
[PATCH] Proposed Fix (6.35 KB, patch)
2016-09-01 20:21 PDT, Joseph Pecoraro
bburg: review+
Radar WebKit Bug Importer
Comment 1 2016-09-01 12:20:01 PDT
Joseph Pecoraro
Comment 2 2016-09-01 20:15:13 PDT
This happens only on Mac platforms, because WebInspectorProxyMac's platformDidClose doesn't immediately close the WebPage that crashed. It just sets a timer to close it in 60 seconds. We need a stronger "close because it crashed" case.
Joseph Pecoraro
Comment 3 2016-09-01 20:21:38 PDT
Created attachment 287720 [details] [PATCH] Proposed Fix
Blaze Burg
Comment 4 2016-09-02 10:02:18 PDT
Comment on attachment 287720 [details] [PATCH] Proposed Fix View in context: https://bugs.webkit.org/attachment.cgi?id=287720&action=review r=me but please re-run through EWS when our lab is not on fire > Source/WebKit2/UIProcess/mac/WebInspectorProxyMac.mm:171 > + if (m_inspectorProxyObjCAdapter) { It would be kind of worrying if this were nil. Is this possible if the process crashes prior to creating the adapter (like right after we spawn it i guess) ?
Joseph Pecoraro
Comment 5 2016-09-02 10:57:22 PDT
Well this won't apply until bug 161515. I'll just wait for that.
Joseph Pecoraro
Comment 6 2016-09-02 13:40:50 PDT
Comment on attachment 287720 [details] [PATCH] Proposed Fix View in context: https://bugs.webkit.org/attachment.cgi?id=287720&action=review >> Source/WebKit2/UIProcess/mac/WebInspectorProxyMac.mm:171 >> + if (m_inspectorProxyObjCAdapter) { > > It would be kind of worrying if this were nil. Is this possible if the process crashes prior to creating the adapter (like right after we spawn it i guess) ? I don't think it is nil, but its much easier to reason about this method when it just does the right thing regardless of the state of members.
Joseph Pecoraro
Comment 7 2016-09-02 13:43:25 PDT
(In reply to comment #6) > Comment on attachment 287720 [details] > [PATCH] Proposed Fix > > View in context: > https://bugs.webkit.org/attachment.cgi?id=287720&action=review > > >> Source/WebKit2/UIProcess/mac/WebInspectorProxyMac.mm:171 > >> + if (m_inspectorProxyObjCAdapter) { > > > > It would be kind of worrying if this were nil. Is this possible if the process crashes prior to creating the adapter (like right after we spawn it i guess) ? > > I don't think it is nil, but its much easier to reason about this method > when it just does the right thing regardless of the state of members. I mean to say, I made these changes not because they were required, but because it just made more sense to me. Just cleanup
Joseph Pecoraro
Comment 8 2016-09-02 14:01:56 PDT
Note You need to log in before you can comment on or make changes to this bug.